--- a/templates/removebook.html
+++ b/templates/removebook.html
@@ -5,6 +5,6 @@
 <form action="{{url_for('delete_book')}}" method="post">
     <label>book title:<input type="text" name="title"></label><br>
     <label>id:<input type="text" name="id"></label><br>
-    <button type="submit" style="width: 50px; height: 30px; position: relative; margin-top: 10px; margin-left: 50px;">remove</button>
+    <button type="submit" style=" height: 30px; position: relative; margin-top: 10px; margin-left: 50px;">remove</button>
 </form>
 {% endblock %}
